--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,142 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    
+    <!-- Safe area is 72dp x 72dp centered (18dp margin on each side) -->
+    <group android:translateX="18" android:translateY="18">
+        
+        <!-- Building silhouettes -->
+        <rect
+            android:width="15dp"
+            android:height="30dp"
+            android:x="15dp"
+            android:y="25dp"
+            android:fillColor="#FFFFFF"
+            android:fillAlpha="0.9" />
+        
+        <rect
+            android:width="15dp"
+            android:height="35dp"
+            android:x="35dp"
+            android:y="20dp"
+            android:fillColor="#FFFFFF"
+            android:fillAlpha="0.9" />
+        
+        <rect
+            android:width="15dp"
+            android:height="25dp"
+            android:x="55dp"
+            android:y="30dp"
+            android:fillColor="#FFFFFF"
+            android:fillAlpha="0.9" />
+        
+        <!-- Windows -->
+        <rect
+            android:width="4dp"
+            android:height="4dp"
+            android:x="17dp"
+            android:y="27dp"
+            android:fillColor="#1976D2" />
+        
+        <rect
+            android:width="4dp"
+            android:height="4dp"
+            android:x="24dp"
+            android:y="27dp"
+            android:fillColor="#1976D2" />
+        
+        <rect
+            android:width="4dp"
+            android:height="4dp"
+            android:x="17dp"
+            android:y="33dp"
+            android:fillColor="#1976D2" />
+        
+        <rect
+            android:width="4dp"
+            android:height="4dp"
+            android:x="24dp"
+            android:y="33dp"
+            android:fillColor="#1976D2" />
+        
+        <rect
+            android:width="4dp"
+            android:height="4dp"
+            android:x="37dp"
+            android:y="22dp"
+            android:fillColor="#1976D2" />
+        
+        <rect
+            android:width="4dp"
+            android:height="4dp"
+            android:x="44dp"
+            android:y="22dp"
+            android:fillColor="#1976D2" />
+        
+        <rect
+            android:width="4dp"
+            android:height="4dp"
+            android:x="37dp"
+            android:y="28dp"
+            android:fillColor="#1976D2" />
+        
+        <rect
+            android:width="4dp"
+            android:height="4dp"
+            android:x="44dp"
+            android:y="28dp"
+            android:fillColor="#1976D2" />
+        
+        <rect
+            android:width="4dp"
+            android:height="4dp"
+            android:x="57dp"
+            android:y="32dp"
+            android:fillColor="#1976D2" />
+        
+        <rect
+            android:width="4dp"
+            android:height="4dp"
+            android:x="64dp"
+            android:y="32dp"
+            android:fillColor="#1976D2" />
+        
+        <rect
+            android:width="4dp"
+            android:height="4dp"
+            android:x="57dp"
+            android:y="38dp"
+            android:fillColor="#1976D2" />
+        
+        <rect
+            android:width="4dp"
+            android:height="4dp"
+            android:x="64dp"
+            android:y="38dp"
+            android:fillColor="#1976D2" />
+        
+        <!-- Meter/gauge element -->
+        <path
+            android:pathData="M28,65 A8,8 0 1,1 44,65 A8,8 0 1,1 28,65"
+            android:fillColor="#4CAF50"
+            android:strokeColor="#FFFFFF"
+            android:strokeWidth="1" />
+        
+        <!-- Gauge needle -->
+        <path
+            android:pathData="M36,65 L36,58"
+            android:strokeColor="#FFFFFF"
+            android:strokeWidth="1.5"
+            android:strokeLineCap="round" />
+        
+        <path
+            android:pathData="M36,65 L42,62"
+            android:strokeColor="#FFFFFF"
+            android:strokeWidth="1.5"
+            android:strokeLineCap="round" />
+        
+    </group>
 </vector>
